Version 1.2.1
  Bug with displaying data form views fixed
Version 1.2
  Correctly scaling on the Galaxy Tab and hopefully on other large displays
  Open SQL files (from database view) and executed all or single line
  Error messages during restore and execution of scripts and statements
  Data editing form table viewer by using "Edit" button at each row
  New records can be added by using the "New" button in the table heading
    Input mode during editing and insert depends on the fields data type. SQLite
	uses a dynamic type system where field types can be given as any string
	aSQLiteManager translates this string into the following types and use this
	to set input mode (SQLite types i parenthesis). The translation is NOT
	case sensitive:
		STRING (string, text), INTEGER (integer), FLOAT (real, float, double),
		DATE (date), TIME (time), DATETIME (datetime), BOOLEAN (boolean, bool),
		PHONENO (phoneno). aSQLiteManager does not handle BLOB

Working on:
  Planning for further development, feature request are welcome, could be:
	Sort data / query results by clicking on title
	Implement some of SQLites .commands:
	  .read FILENAME		execute SQL from file
	  .import FILE TABLE	import data from file to table
	  .output FILENAME		send output to file
	  .dump ?TABLE?			dump database / table, a supplement to export
	  .restore ?DB? FILE	restore database from a file, a supplement to restore 	
	Scripts editor?  

Version 1.2β
  Open SQL files (from database view) and executed all or single lines
  Error messages during restore and execution of scripts and statements
  Data editing form table viewer by using "Edit" button at each row
  New records can be added by using the "New" button in the table heading
    Input mode during editing and insert depends on the fields data type. SQLite
	uses a dynamic type system where field types can be given as any string
	aSQLiteManager translates this string into the following types and use this